# fifo_buffer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fifo.c  fifo.h
tests/: Increment_by_1_test.c  check_buf_len_1 copy.c  check_buf_len_1.c  check_buf_len_2.c  check_buffer_full.c  check_wrap_around.c  fifo.c  fifo.h  init_test.c  null_pointer_check.c  pop_data.c  push_data.c  push_data_underflow.c
